--- a/Models/Panel/VSI/Variometer.ac
+++ b/Models/Panel/VSI/Variometer.ac
@@ -8,7 +8,7 @@ kids 4
 OBJECT poly
 name "needle"
 loc 0 0.00169145 -0.000211045
-texture "C:/Program Files/FlightGear 2.6.0/FlightGear/data/Aircraft/Cygnet_II/Models/panel/Instruments/oil-press/instruments.png"
+texture "Aircraft/Cygnet_II/Models/panel/Instruments/oil-press/instruments.png"
 numvert 115
 -0.001419 -0.002287 0.004666
 -0.001419 -0.000438999 0.004666
